<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_location"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/place_ic"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_place"
        android:tint="@color/md_light_blue_500"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/choose_location"/>

    <AutoCompleteTextView
        android:drawableRight="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_search"
        android:tint="@color/colorAccent"
        android:id="@+id/search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:inputType="textAutoComplete"
        android:imeOptions="actionDone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/soek_hint">
    </AutoCompleteTextView>
    <Space
        android:id="@+id/space0"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:id="@+id/title_templates"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/templates_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin"
        android:orientation="horizontal">

        <Space
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/template_sun"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_sun_filled"
            android:onClick="onTemplateButtonClick"
            android:elevation="2dp"
            android:layout_marginBottom="5dp"
            />

        <ImageButton
            android:id="@+id/template_snow"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_skiing_48"
            android:onClick="onTemplateButtonClick"
            android:elevation="2dp"
            android:layout_marginBottom="5dp"
            />

        <ImageButton
            android:id="@+id/template_wind"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_in_sea_filled"
            android:elevation="2dp"
            android:onClick="onTemplateButtonClick"
            android:layout_marginBottom="5dp"
            />
        <ImageButton
            android:id="@+id/template_hiking"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_trekking"
            android:elevation="2dp"
            android:onClick="onTemplateButtonClick"
            android:layout_marginBottom="5dp"
        />
        <ImageButton
            android:id="@+id/template_rain"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_rainy_weather"
            android:elevation="2dp"
            android:onClick="onTemplateButtonClick"
            android:layout_marginBottom="5dp"
            />
        <Space
            android:id="@+id/space2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:id="@+id/space3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/template_custom"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_custom"
            android:onClick="onTemplateButtonClick"
            android:elevation="2dp"
            android:layout_marginBottom="5dp"
            />
        <Space
            android:id="@+id/space4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/space5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:background="@color/transparent"
            android:textColor="@color/md_blue_500"
            android:textSize="16sp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onCancelButtonClick"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:background="@color/transparent"
            android:textColor="@color/md_blue_500"
            android:textSize="16sp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onNextButtonClick"
            />
    </LinearLayout>




</LinearLayout>