<resources>
    <string name="app_name">Winder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="temp_interval">Temperature:</string>
    <string name="nedboer_intervall">Precipitation:</string>
    <string name="vind_styrke">Windspeed:</string>
    <string name="vind_retning">Wind direction:</string>
    <string name="sjekk_intervall">Check interval:</string>
    <string name="sol_varsel">Sunalert:</string>
    <string name="lagre_varsel_button">Save</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_location">Choose location for alerts</string>
    <string name="soek_hint">Search for location....</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="toast_more_then_ten_alerts">Warning! Alertlist is fully populated, delet one to make room</string>
    <string name="yr_credits">Weather data provided by Yr.no</string>
    <string name="last_update">Last update:</string>
    <string name="empty_list_text">Winder finds a matching weather for you</string>
    <string name="manual_refresh">Updating forecasts...</string>
    <string name="settings_for_alert">Choose preferences for alert</string>
    <!-- AlertOverViewActivity-->
    <string name="title_activity_alert_over_view">AlertOverViewActivity</string>
    <string name="your_preferences">Your preferences:</string>
    <string name="check_interval">Check interval: </string>
    <string name="settings">Settings</string>
    <string name="eventlist">Events</string>
    <string name="weekdays">Ukedager: </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="something_whent_wrong">Something went wrong..</string>
    <string name="delete_message">Do you want to delete de alert?</string>
    <string name="empty_event_list_text">No weather events found </string>


    <!-- AlertSettings Preference strings: -->
    <string name="on_next_button_click_warning">Enter a valid location!</string>
    <string name="wind_dir_not_chosen">"Please select preferred wind directions"</string>
    <string name="no_settings_selected">No settings selected..</string>
    <string name ="name_of_prefs_saved">prefValuesSaved</string>
    <string name="save_prefs_button">Save</string>
    <string name="cancel_prefs_button">Cancel</string>

    <string name="temp_pref_key">tempPref</string>
    <string name="temp_pref_key_min">minTemp</string>
    <string name="temp_pref_key_max">maxTemp</string>
    <string name="temp_range_key">tempRange</string>

    <string name="precip_pref_key">precipPref</string>
    <string name="precip_pref_key_min">minPrecip</string>
    <string name="precip_pref_key_max">maxPrecip</string>
    <string name="precip_range_key">precipRange</string>

    <string name="windspeed_pref_key">windSpeedPref</string>
    <string name="windspeed_pref_key_min">minWindSpeed</string>
    <string name="windspeed_pref_key_max">maxWindSpeed</string>
    <string name="windspeed_range_key">windSpeedRange</string>

    <string name="winddir_pref_key">windDirPref</string>
    <string name="winddir_select_key">windDir</string>

    <string name="sunny_pref_key">sunnyPref</string>

    <string name="weekdays_pref_key">weekdays</string>

    <string name="checkintr_pref_key">checkIntrPref</string>

    <string name="prefered_icon_key">iconPref</string>
    <string name="prefered_icon_key_default">ic_custom</string>

    <string name="templates_title">Choose weather template:</string>

    <!-- CompareAXService-strings: -->
    <string name="notification_message_title_success">We have a match!</string>
    <string name="notification_message_title_no_success">No longer a match!</string>
    <string name="notification_message_text">For </string>
    <string name="generate_temperature">Temperature: </string>
    <string name="generate_precipitatiion">Precipitation: </string>
    <string name="generate_clear">Clear weather!</string>
    <string name="generate_cloudy">Fair weather!</string>
    <string name="generate_winddirection">Wind direction: </string>
    <string name="generate_windspeed">Wind speed: </string>

    <!-- Arrays.xml-strings: -->
    <string name="weekdays_monday">Monday</string>
    <string name="weekdays_tuesday">Tuesday</string>
    <string name="weekdays_wednesday">Wednesday</string>
    <string name="weekdays_thursday">Thursday</string>
    <string name="weekdays_friday">Friday</string>
    <string name="weekdays_saturday">Saturday</string>
    <string name="weekdays_sunday">Sunday</string>

    <string name="checkinterval_one">Every 1 hour</string>
    <string name="checkinterval_two">Every 2 hour</string>
    <string name="checkinterval_four">Every 4 hour</string>
    <string name="checkinterval_six">Every 6 hour</string>
    <string name="checkinterval_twelve">Every 12 hour</string>
    <string name="checkinterval_day">Every 24 hour</string>
    <string name="checkinterval_twodays">Every 48 hour</string>


    <!--AlertPreferences-->
    <string name="preferences_temperature">Temperature</string>
    <string name="preferences_temperature_scale">\u2103</string>
    <string name="preferences_precipitation">Precipitation</string>
    <string name="preferences_precipitation_amount_period">mm, per 6 hour period</string>
    <string name="preferences_windspeed">Windspeed</string>
    <string name="preferences_windspeed_description">m/s</string>
    <string name="preferences_winddir">Wind direction</string>
    <string name="preferences_weekdays_check">Weekdays for check</string>
    <string name="preferences_interval">Check interval</string>
    <string name="preferences_interval_description">Choose frequency for the automatic weather check</string>
    <string name="choose_winddirection_string">Choose wind direction</string>
    <string name="choose_weekdays_string">Choose which days you prefer the weather to occur (Default is all days)</string>
    <string name="preferences_suncheck">Suncheck</string>
    <string name="info_header">INFO</string>
    <string name="about_header">About</string>
    <string name="about">Winder is an Application provided by EIM Development. This app is supposed to be a tool for users who are occupied by-  or depending on weather conditions in the activities you are planning to conduct. By defining your prefrences for weather  forecasting or by predefined custom options based on  different activities, you will receive a notification when your conditions is satisfied. To make this happen we have used weather forecast from Yr, delivered by the Norwegian Meteorological Institute and NRK</string>
    <string name="notification_message_title">We have a match!</string>
    <string name="notification_message_title_additional_events">Additional events found!</string>
    <string name="something_went_wrong_toast">Something went wrong..</string>
    <string name="saved_toast">Saved!</string>

    <!--Winddirection-array -->
    <string name="N">North</string>
    <string name="NNW">North-Northwest</string>
    <string name="NW">Northwest</string>
    <string name="WNW">West-Northwest</string>
    <string name="W">West</string>
    <string name="WSW">West-Southwest</string>
    <string name="SW">Southwest</string>
    <string name="SSW">South-Southwest</string>
    <string name="S">South</string>
    <string name="SSE">South-Southeast</string>
    <string name="SE">Southeast</string>
    <string name="ESE">East-Southeast</string>
    <string name="E">East</string>
    <string name="ENE">East-Northeast</string>
    <string name="NE">Northeast</string>
    <string name="NNE">North-Northeast</string>

    <!--Strings for appsettings-->
    <string name="settings_header">SETTINGS</string>
    <string name="connection_header">Connection settings</string>
    <string name="pref_connection_summary">Use mobile data for weather-updates</string>
    <string name="pref_use_mobile_data">Mobile data</string>

    <string name="language_header">Language</string>
    <string name="pref_language_summary">Not selected</string>
    <string name="pref_chose_language">Change language</string>
    <string name="language_default">System Default</string>
    <string name="languagelist_default">default</string>
    <string name="language_norwegian">Norwegian</string>
    <string name="language_english">English</string>
    <string name="language_pref_key">prefLanguage</string>
    <string name="no_last_update">Not found</string>
    <string name="get_started">Press + to get started</string>
    <string name="mobile_network_pref_key">prefUseMobileData</string>

</resources>
