...
                style="?android:attr/borderlessButtonStyle"
                android:onClick="onCancelButtonClick"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save_prefs_button"
                android:textAllCaps="true"
                android:background="@color/transparent"
...
